[tool.poetry]
name = "rdstation-python"
version = "0.2.2"
description = "API wrapper for RD Station written in Python"
authors = ["Juan Carlos Rios <juankrios15@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "rdstation"}]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

